--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: My website
+title: daria의 좌충우돌 기술 이야기
 
 # Short description of your site
 description: A virtual proof that I'm awesome
